--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <title>MuzakMaker</title>
 </head>
 <body>
-    Smooth Jazz
-This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.
+    <header>
+        <h1>Smooth Jazz</h1>
+        <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.</p>
 
-MuzakMaker
-Trending Songs
-Your playlists
-Curated Playlists
-duke-silver.png
+    <nav>
+        <li>
+            <ul><a href="#">MuzakMaker</a></ul>
+            <ul><a href="#">Trending Songs</a></ul>
+            <ul><a href="#">Your playlists</a></ul>
+            <ul><a href="#">Curated Playlists</a></ul>
+            <ul><a href="#"><img src="duke-silver.png"></a></ul>
+        </li>
+    </nav>
+
+    <main>
+        
+    </main>
+
 Trending Songs
 Aloma
 Artist Cali
