--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.</p>
 
     <nav>
-        <li>
-            <ul><a href="#">MuzakMaker</a></ul>
-            <ul><a href="#">Trending Songs</a></ul>
-            <ul><a href="#">Your playlists</a></ul>
-            <ul><a href="#">Curated Playlists</a></ul>
-            <ul><a href="#"><img src="duke-silver.png"></a></ul>
-        </li>
+        <ul>
+            <li><a href="#">MuzakMaker</a></li>
+            <li><a href="#">Trending Songs</a></li>
+            <li><a href="#">Your playlists</a></li>
+            <li><a href="#">Curated Playlists</a></li>
+            <li><a href="#"><img src="images/duke-silver.png"></a></li>
+        </ul>
     </nav>
 
     <main>
-
+        
     </main>
 
 Trending Songs
