--- a/index.html
+++ b/index.html
@@ -18,42 +18,66 @@
             <li><a href="#">Trending Songs</a></li>
             <li><a href="#">Your playlists</a></li>
             <li><a href="#">Curated Playlists</a></li>
-            <li><a href="#"><img src="images/duke-silver.png"></a></li>
+            <li><a href="#"><img src="images/duke-silver.png" alt="guy in hat"></a></li>
         </ul>
     </nav>
 
     <main>
-        
+        <h2>Trending Songs</h2>
+        <section>
+            <h3>Aloma</h3>
+            <p>Artist Cali</p>
+            <img src="images/aloma-cover.png" alt="bird">
+            <audio controls>
+                <source src="audio/aloma.mp3" type="audio/mpeg">
+            </audio>
+        </section>
+
+        <section>
+            <h3>My Road</h3>
+            <p>Artist Nesterouk</p>
+            <img src="images/my-road-cover.png" alt="road">
+            <audio controls>
+                <source src="audio/my-road.mp3" type="audio/mpeg">
+            </audio>
+        </section>
+
+        <section>
+            <h3>Papaya</h3>
+            <p>Artist Dredstudio</p>
+            <img src="images/papaya-cover.png" alt="papaya">
+            <audio controls>
+                <source src="audio/papaya.mp3" type="audio/mpeg">
+            </audio>
+        </section>
+
+        <section>
+            <h3>Smoothies</h3>
+            <p>Artist Black Rhomb</p>
+            <img src="images/smoothies-cover.png" alt="fruits">
+            <audio controls>
+                <source src="audio/smoothies.mp3" type="audio/mpeg">
+            </audio>
+        </section>
+
+        <section>
+            <h3>Successful Performance</h3>
+            <p>Artist Ricky Bombino</p>
+            <img src="images/successful-performance-cover.png" alt="happy guy">
+            <audio controls>
+                <source src="audio/successful-performance.mp3" type="audio/mpeg">
+            </audio>
+        </section>
+
+        <section>
+            <li><a href="#">More trending</a></li>
+        </section>
+
+        <section>
+            <h2>Your Playlists</h2>
+            <img src="images/best-of-2020-cover.png" alr="2020 flame">
+        </section>
     </main>
-
-Trending Songs
-Aloma
-Artist Cali
-aloma-cover.png
-aloma.mp3
-
-My Road
-Artist Nesterouk
-my-road-cover.png
-my-road.mp3
-
-Papaya
-Artist Dredstudio
-papaya-cover.png
-papaya.mp3
-
-Smoothies
-Artist Black Rhomb
-smoothies-cover.png
-smoothies.mp3
-
-Successful Performance
-Artist Ricky Bombino
-successful-performance-cover.png
-successful-performance.mp3
-
-More trending
-Your Playlists
 best-of-2020-cover.png
 Best of 2020
 The music that got you through the lock down.
