--- a/index.html
+++ b/index.html
@@ -73,62 +73,84 @@
             <li><a href="#">More trending</a></li>
         </section>
 
+        <h2>Your Playlists</h2>
         <section>
-            <h2>Your Playlists</h2>
             <img src="images/best-of-2020-cover.png" alr="2020 flame">
+            <h3>Best of 2020</h3>
+            <p>The music that got you through the lock down.</p>
+        </section>
+
+        <section>
+            <img src="images/pumpkin-spice-cover.png" alr="coffee">
+            <h3>Pumpkin Spice</h3>
+            <p>Creamy and spicy, just like your favorite autumnal latte.</p>
+        </section>
+
+        <section>
+            <img src="images/quiet-storm-cover.png" alr="clouds">
+            <h3>Quiet Storm</h3>
+            <p>Slow tempos and relaxed rhythms.</p>
+        </section>
+
+        <section>
+            <img src="images/smooth-jazz-cover.png" alr="glasses guy">
+            <h3>Smooth Jazz</h3>
+            <p>The pioneers of smooth jazz</p>
+        </section>
+
+        <section>
+            <img src="images/smooth-study-cover.png" alr="typing on laptop">
+            <h3>Smooth Study</h3>
+            <p>Background music to keep you going while you study.</p>
+        </section>
+
+        <section>
+            <img src="images/smooth-study-cover.png" alr="typing on laptop">
+            <h3>Smooth Study</h3>
+            <p>Background music to keep you going while you study.</p>
+        </section>
+
+        <section>
+            <li><a href="#">All your playlists</a></li>
+        </section>
+
+        <h2>Curated Playlists</h2>
+        <section>
+            <img src="images/boozy-brunch-cover.png" alr="drinks">
+            <h3>Boozy Brunch</h3>
+            <p>Light up the afternoon with these energetic hits.</p>
+        </section>
+
+        <section>
+            <img src="images/dinner-party-cover.png" alr="dinner">
+            <h3>Dinner Party</h3>
+            <p>Background music to give your party life, but allow your guests to chat.</p>
+        </section>
+
+        <section>
+            <img src="images/mellow-cover.png" alr="park">
+            <h3>Mellow</h3>
+            <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
+        </section>
+
+        <section>
+            <img src="images/jazz-chill-cover.png" alr="roses">
+            <h3>Jazz and Chill</h3>
+            <p>Set the mood with these silky sounds.</p>
+        </section>
+
+        <section>
+            <img src="images/smooth-saxophone-cover.png" alr="saxophone">
+            <h3>Jazz Saxophone</h3>
+            <p>The greatest collection of your sax favorites.</p>
+        </section>
+        
+        <section>
+            <li><a href="#">More curated</a></li>
         </section>
     </main>
-best-of-2020-cover.png
-Best of 2020
-The music that got you through the lock down.
-
-
-pumpkin-spice-cover.png
-Pumpkin Spice
-Creamy and spicy, just like your favorite autumnal latte.
-
-
-quiet-storm-cover.png
-Quiet Storm
-Slow tempos and relaxed rhythms. 
-
-
-smooth-jazz-cover.png
-Smooth Jazz
-The pioneers of smooth jazz
-
-
-smooth-study-cover.png
-Smooth Study
-Background music to keep you going while you study. 
-
-
-All your playlists
-Curated Playlists
-boozy-brunch-cover.png
-Boozy Brunch
-Light up the afternoon with these energetic hits. 
-
-dinner-party-cover.png
-Dinner Party
-Background music to give your party life, but allow your guests to chat. 
-
-mellow-cover.png
-Mellow
-Relax after a stressful day with this collection of extra smooth jazz.
-
-jazz-chill-cover.png
-Jazz and Chill
-Set the mood with these silky sounds.
-
-smooth-saxophone-cover.png
-Jazz Saxophone
-The greatest collection of your sax favorites.
-
-More curated
-
-
-Copyright 2022 Smooth Jazz
-
+    <footer>
+        <p><small>Copyright 2022 Smooth Jazz</small></p>
+    </footer>
 </body>
 </html>
