--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </section>
     </main>
     <footer>
-        <p><small>Copyright 2022 Smooth Jazz</small></p>
+        <p>Copyright 2022 Smooth Jazz</p>
     </footer>
 </body>
 </html>
