--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <input type="checkbox" id="dropdown" />
         <label for="dropdown"><span></span></label>
         <ul>
-            <li id="MuzMak"><a href="#">MuzakMaker</a></li>
-            <li class="menu"><a href="#">Trending Songs</a></li>
-            <li class="menu"><a href="#">Your playlists</a></li>
-            <li class="menu"><a href="#">Curated Playlists</a></li>
-            <li class="menu"><a href="#"><img src="images/duke-silver.png" alt="guy in hat"></a></li>
+            <li id="MuzMak"><a href="index.html">MuzakMaker</a></li>
+            <li class="menu"><a href="#trending">Trending Songs</a></li>
+            <li class="menu"><a href="#your_playlists">Your playlists</a></li>
+            <li class="menu"><a href="#curated_playlists">Curated Playlists</a></li>
+            <li class="menu"><a href="index.html"><img src="images/duke-silver.png" alt="guy in hat"></a></li>
         </ul>
     </nav>
 
     <main>
-        <h2 class="heads">Trending Songs</h2>
+        <h2 class="heads" id="trenHead">Trending Songs</h2>
         <section id="trending">
             <div id="scroll">
             <section>
