--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav>
         <h2>Main Navigation</h2>
-        <input type="checkbox" id="dropdown" />
+        <input type="checkbox" id="dropdown">
         <label for="dropdown"><span></span></label>
         <ul>
             <li id="MuzMak"><a href="index.html">MuzakMaker</a></li>
@@ -29,7 +29,7 @@
 
     <main>
         <h2 class="heads" id="trenHead">Trending Songs</h2>
-        <section id="trending">
+        <div id="trending">
             <div id="scroll">
             <section>
                 <div>
@@ -102,7 +102,7 @@
             </section>
             </div>
             <p class="more_p"><a href="#" class="more" id="more_tren">More trending</a></p>
-        </section>
+        </div>
         <div id="medium">
             <div id="first">
             <section id="your_playlists">
