--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
                 </section>
                 </div>  
             </section>
-                <p class="more_p"><a href="#" class="more" id="other2">More curated</a></p>
+                <a href="#" class="more" id="other2">More curated</a>
             </div>
         </div>
     </main>
     <footer>
-        <p>Copyright 2022 Smooth Jazz</p>
+        <p><small>Copyright 2022 Smooth Jazz</small></p>
     </footer>
 </body>
 </html>
